// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - No Competitors 1`] = `
<main>
  <h1
    class="mx-10 mb-1"
  >
    <back-arrow-stub
      to="/events/12"
    />
    Entries
  
  </h1>
   
  <div
    class="mx-12 mb-3"
  >
    <router-link-stub
      class="button"
      tag="button"
      to="/events/12/competitors/create"
    >
      
      Create Entry
    
    </router-link-stub>
     
    <button
      class="button"
    >
      Refresh
    </button>
  </div>
   
  <!---->
   
  <!---->
</main>
`;

exports[`Renders Correctly - With Competitors 1`] = `
<main>
  <h1
    class="mx-10 mb-1"
  >
    <back-arrow-stub
      to="/events/12"
    />
    Entries
  
  </h1>
   
  <div
    class="mx-12 mb-3"
  >
    <router-link-stub
      class="button"
      tag="button"
      to="/events/12/competitors/create"
    >
      
      Create Entry
    
    </router-link-stub>
     
    <button
      class="button"
    >
      Refresh
    </button>
  </div>
   
  <!---->
   
  <div
    class="shadow mx-12 mb-3 p-2"
  >
    <table
      class="w-full font-body"
    >
      <tr
        class="font-heading text-center hover:bg-blue-light"
      >
        <th>
          
          Name
          
          <up-down-arrows-stub />
        </th>
         
        <th>
          
          SI Card
          
          <up-down-arrows-stub />
        </th>
         
        <th
          class="hidden md:table-cell"
        >
          
          Age Class
          
          <up-down-arrows-stub />
        </th>
         
        <th>
          
          Course
          
          <up-down-arrows-stub />
        </th>
         
        <th
          class="hidden lg:table-cell"
        >
          
          Club
          
          <up-down-arrows-stub />
        </th>
      </tr>
       
      <tbody
        name="fade"
      >
        <router-link-stub
          class="text-center odd:bg-blue-lightest hover:bg-blue-light"
          tag="tr"
          to="/events/12/competitors/0/edit"
        >
          <td>
            Bob
          </td>
           
          <td>
            154585
          </td>
           
          <td
            class="hidden md:table-cell"
          >
            
          </td>
           
          <td>
            
          </td>
           
          <td
            class="hidden lg:table-cell"
          >
            
          </td>
        </router-link-stub>
        <router-link-stub
          class="text-center odd:bg-blue-lightest hover:bg-blue-light"
          tag="tr"
          to="/events/12/competitors/77/edit"
        >
          <td>
            Shaun
          </td>
           
          <td>
            12345
          </td>
           
          <td
            class="hidden md:table-cell"
          >
            
          </td>
           
          <td>
            
          </td>
           
          <td
            class="hidden lg:table-cell"
          >
            
          </td>
        </router-link-stub>
      </tbody>
    </table>
  </div>
</main>
`;
